force-app/main/default/objects/FEC_Case_Assignment_NOC__c/FEC_Case_Assignment_NOC__c.object-meta.xml
<CustomObject>
    <description>Danh sách các bộ NOC được áp dụng trong Rule phân bổ</description>
    <label>Case Assignment NOC</label>
    <nameField>
        <displayFormat>A-{000000}</displayFormat>
        <label>Case Assignment NOC Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Assignment NOC</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>