force-app/main/default/objects/FEC_Case_Assignment_NOC__c/fields/FEC_Case_Assignment_Name__c.field-meta.xml
<CustomField>
    <fullName>FEC_Case_Assignment_Name__c</fullName>
    <label>Case Assignment Name</label>
    <referenceTo>FEC_Case_Assignment__c</referenceTo>
    <relationshipLabel>Case Assignment NOC</relationshipLabel>
    <relationshipName>Case_Assignment_NOC</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>