force-app/main/default/objects/FEC_Case_Assignment_NOC__c/fields/FEC_Product_Type__c.field-meta.xml
<CustomField>
    <fullName>FEC_Product_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Type</label>
    <referenceTo>FEC_Product_Type__c</referenceTo>
    <relationshipLabel>Case Assignment NOC</relationshipLabel>
    <relationshipName>Case_Assignment_NOC</relationshipName>
    <type>Lookup</type>
</CustomField>