force-app/main/default/objects/FEC_Case_Assignment_NOC__c/fields/FEC_Sub_Code__c.field-meta.xml
<CustomField>
    <fullName>FEC_Sub_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sub Code</label>
    <referenceTo>FEC_Sub_Code__c</referenceTo>
    <relationshipLabel>Case Assignment NOC</relationshipLabel>
    <relationshipName>Case_Assignment_NOC</relationshipName>
    <type>Lookup</type>
</CustomField>